Fixes spacing on event and tag templates

--- a/wp-content/themes/cmp/assets/styles/pages/_tag-partial.scss
+++ b/wp-content/themes/cmp/assets/styles/pages/_tag-partial.scss
@@ -9,17 +9,18 @@
   article {
     display: flex;
     margin-bottom: $base-spacing;
+    padding-bottom: 0;
+    overflow: hidden;
   }
 
   .article__content {
     flex-basis: 80%;
-    margin-left: 1em !important;
   }
 
   .article__image {
-    height: 200px;
+    max-height: 200px;
     width: 200px;
-    // overflow: hidden;
+    margin-right: $small-spacing;
 
     img {
       object-fit: cover;
